テンプレートのメールの文字を変更

--- a/etc/srv/wordpress.yml
+++ b/etc/srv/wordpress.yml
@@ -9,7 +9,7 @@ services:
     environment:
       VIRTUAL_HOST: APP_NAME.DOMAIN
       LETSENCRYPT_HOST: APP_NAME.DOMAIN
-      LETSENCRYPT_EMAIL: MAIL
+      LETSENCRYPT_EMAIL: APP_MAIL
       WORDPRESS_DB_HOST: 172.18.0.1:33065
       WORDPRESS_DB_USER: native
       WORDPRESS_DB_PASSWORD: password
