--- a/etc/srv/django.yml
+++ b/etc/srv/django.yml
@@ -9,7 +9,7 @@ services:
     environment:
       VIRTUAL_HOST: APP_NAME.DOMAIN
       LETSENCRYPT_HOST: APP_NAME.DOMAIN
-      LETSENCRYPT_EMAIL: MAIL
+      LETSENCRYPT_EMAIL: APP_MAIL
       DJANGO_NAME: APP_NAME
       DJANGO_DB_HOST: 172.18.0.1
       DJANGO_DB_USER: native
