--- a/etc/srv/laravel.yml
+++ b/etc/srv/laravel.yml
@@ -9,7 +9,7 @@ services:
     environment:
       VIRTUAL_HOST: APP_NAME.DOMAIN
       LETSENCRYPT_HOST: APP_NAME.DOMAIN
-      LETSENCRYPT_EMAIL: MAIL
+      LETSENCRYPT_EMAIL: APP_MAIL
       LARAVEL_NAME: APP_NAME
       LARAVEL_ENV: production
       LARAVEL_DB_HOST: 172.18.0.1
