--- a/etc/srv/php7.yml
+++ b/etc/srv/php7.yml
@@ -9,7 +9,7 @@ services:
     environment:
       VIRTUAL_HOST: APP_NAME.DOMAIN
       LETSENCRYPT_HOST: APP_NAME.DOMAIN
-      LETSENCRYPT_EMAIL: MAIL
+      LETSENCRYPT_EMAIL: APP_MAIL
     volumes:
       - .:/var/www/html
 
